--- a/.gitignore
+++ b/.gitignore
@@ -124,4 +124,10 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Other shit to ignore
+*/.DS_Store
 .DS_Store
+srlc/srl/templates/srl/faq.html
+srlc/srl/templates/srl/privacy_policy.html
+srlc/srl/templates/srl/changelog.html
