--- a/requirements.txt
+++ b/requirements.txt
@@ -67,7 +67,7 @@ requests==2.32.3
 rsa==4.9
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
-sentry-sdk==2.13.0
+sentry-sdk[django]==2.16.0
 setuptools==74.1.0
 six==1.16.0
 soupsieve==2.6
