--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ google-api-python-client==2.143.0
 google-auth==2.34.0
 google-auth-httplib2==0.2.0
 googleapis-common-protos==1.65.0
+gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.8
 kombu==5.4.0
@@ -82,4 +83,5 @@ vine==5.1.0
 wcwidth==0.2.13
 websockets==13.0.1
 wheel==0.44.0
+whitenoise==6.7.0
 yarl==1.9.7
