Finalize Nginx Settings

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,11 @@
 server_tokens off;
-
 upstream django {
     server django:8000;
 }
 
 server {
     listen 80;
+    server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
 
     location / {
         proxy_pass http://django;
@@ -16,6 +16,7 @@ server {
     }
 
     location /static/ {
-        alias /fuck/static/;
+        alias /srlc/static/;
     }
+
 }
