--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,11 +3,9 @@ upstream django {
     server django:8000;
 }
 
-# Server block for HTTP (port 80)
 server {
     listen 80;
-    server_name localhost;
-    #server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
+    server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
 
     location / {
         proxy_pass http://django;
@@ -21,31 +19,4 @@ server {
         alias /srlc/static/;
     }
 
-    # Redirect HTTP to HTTPS
-    #return 301 https://$host$request_uri;
 }
-
-###### Uncomment the following block to enable HTTPS (port 443) and follow any instructions added.
-
-# server {
-#     listen 443 ssl;
-#     server_name localhost;
-#     #server_name thps.run www.thps.run;
-#
-#     ssl_certificate /path/to/your/certificate.crt;
-#     ssl_certificate_key /path/to/your/private.key;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers HIGH:!aNULL:!MD5;
-#
-#     location / {
-#         proxy_pass http://django;
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-#
-#     location /static/ {
-#         alias /srlc/static/;
-#     }
-# }
