Fixed Docker Image somewhat

--- a/.gitignore
+++ b/.gitignore
@@ -128,21 +128,11 @@ dmypy.json
 # Other shit to ignore
 */.DS_Store
 .DS_Store
-<<<<<<< HEAD
-<<<<<<< Updated upstream
-srlc/srl/static/pfp/
-=======
-srlc/srl/static/pfp/*
->>>>>>> Stashed changes
-=======
 srlc/srl/static/pfp/*
 srlc/website/static/pfp/*
->>>>>>> origin/master
-
 bin/
-
 .vscode/
-
+include/
 share/man/man1/
-
 pyvenv.cfg
+docker-compose.yml
