--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,8 @@ upstream django {
 
 server {
     listen 80;
-    server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
+    #server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
+    server_name localhost;
 
     location / {
         proxy_pass http://django;
@@ -16,7 +17,7 @@ server {
     }
 
     location /static/ {
-        alias /srlc/static/;
+        alias /srlc/website/static/;
     }
 
 }
