--- a/requirements.txt
+++ b/requirements.txt
@@ -62,13 +62,13 @@ pyasn1_modules==0.4.0
 pycryptodomex==3.20.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.8
 requests==2.32.3
 rsa==4.9
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
-sentry-sdk[django]==2.16.0
 setuptools==74.1.0
 six==1.16.0
 soupsieve==2.6
