Updated to self-hosted runner

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,23 +12,19 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Tailscale
-        uses: tailscale/github-action@v3
         with:
-          oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
-          oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
-          tags: tag:ci
-          version: latest
+          ref: main
 
-      - name: Deploy to VPS via SSH
-        uses: appleboy/ssh-action@v1.2.2
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: |
-            cd deploy
-            git pull origin main
-            docker compose down
-            docker compose up -d --build
+      - name: Pull Latest Changes
+        run: |
+          cd deploy
+          git pull origin main
+
+      - name: Build and Restart Docker Containers
+        run: |
+          docker compose down
+          docker compose pull
+          docker compose up -d --build
+
+      - name: Cleanup Unused Docker Resources
+        run: docker system prune -f
