Begin v2.3 development; added npm instead of nginx; Dockerfile updates

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ POSTGRES_PASSWORD="<POSTGRES_PASSWORD>"
 SECRET_KEY="<SECRETKEY>" #https://djecrety.ir
 SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" #MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
+ALLOWED_HOSTS=<IP>,localhost
 
 DISCORD_URL="<DISCORD>"
 TWITTER_URL="https://twitter.com/<TWITTER>"
