--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,23 +1,27 @@
-server_tokens off;
-upstream django {
-    server django:8001;
+worker_processes auto;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    #server_name thps.run www.thps.run; ## !!!!! NEEDS TO BE CHANGED BY USER
-    server_name localhost;
+http {
+    server_tokens off;
 
-    location / {
-        proxy_pass http://django;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    upstream django {
+        server django:8001;
     }
 
-    location /static/ {
-        alias /srlc/website/static/;
-    }
+    server {
+        listen 80;
+        ##server_name thps.run www.thps.run; ### REMEMBER TO CHANGE THIS!!
+        server_name localhost;
 
+        location / {
+            proxy_pass http://django;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
 }
