--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ TWITTER_URL="https://twitter.com/<TWITTER>"
 TWITCH_URL="https://twitch.tv/<TWITCH>"
 YOUTUBE_URL="https://www.youtube.com/<YOUTUBE>"
 SRC_URL="https://speedrun.com/<SERIESNAME>"
+BLUESKY_URL="https://bsky.app/profile/<HANDLE>"
