Added bluesky support

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
 
       - name: Build and Restart Docker Containers
         run: |
+          cd ~/deploy
           docker compose down
           docker compose pull
           docker compose up -d --build
