Setup for guides
Adds a code of conduct and a changelog
Updates .gitignore to exclude some files

Adds Bluesky social to Players model
Adds volume for guides in docker-compose

Removes old changelog template and links to README

--- a/.gitignore
+++ b/.gitignore
@@ -131,10 +131,7 @@ dmypy.json
 */.DS_Store
 .DS_Store
 srlc/srl/static/pfp/*
-srlc/website/static/pfp/*
-srlc/website/static/admin/*
-srlc/website/static/rest_framework/*
-srlc/website/static/srl/*
+srlc/website/static/*
 bin/
 .vscode/
 include/
@@ -148,4 +145,4 @@ srlc/website/sqlite3.db
 srlc/srl/static/srl/imgs/awards/
 
 srlc/db.json
-srlc/NOTES.yaml
+NOTES.yaml
