--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - ./srlc:/srlc
       - ./static:/srlc/static
+      - /home/thepackle/repos/thps-guides:/srlc/docs
     networks:
       - srlc
 
