Added context processor to simplify website name and metadata

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" #MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
 ALLOWED_HOSTS=<IP>,localhost
 
+SITE_NAME="<WEBSITE NAME>"
+SITE_KEYWORDS=KEYWORDS,SEPARATED,BY,COMMAS
+SITE_AUTHOR=<AUTHOR>
+SITE_DESCRIPTION=<DESCRIPTION>
+
 DISCORD_URL="<DISCORD>"
 TWITTER_URL="https://twitter.com/<TWITTER>"
 TWITCH_URL="https://twitch.tv/<TWITCH>"
