--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django-ratelimit==4.1.0
 django-resized==1.0.3
 django-sekizai==4.1.0
 djangorestframework==3.16.0
-djangorestframework-api-key==3.0.0
+djangorestframework-api-key>=3.0.0
 hypercorn==0.17.3
 langcodes==3.5.0
 language_data==1.3.0
@@ -29,4 +29,4 @@ uritemplate==4.1.1
 urllib3==2.3.0
 wheel==0.45.1
 whitenoise==6.9.0
-yarl==1.18.3
+yarl==1.19.0
