--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,11 @@ django-ratelimit==4.1.0
 django-resized==1.0.3
 django-sekizai==4.1.0
 djangorestframework==3.16.0
-djangorestframework-api-key>=3.0.0
+djangorestframework-api-key==3.1.0
 hypercorn==0.17.3
 langcodes==3.5.0
 language_data==1.3.0
+markdown==3.7
 pillow==11.1.0
 psycopg==3.2.6
 python-dateutil==2.9.0.post0
