--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,18 @@ SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" #MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
 ALLOWED_HOSTS=<IP>,localhost
 
+### Used for the db_backup.sh script. Instructions in README.
+B2_BUCKET=<BUCKET>
+B2_KEY=<BUCKET KEY>
+B2_APP=<BUCKET APP KEY>
+
+### Metadata for the website
 SITE_NAME="<WEBSITE NAME>"
 SITE_KEYWORDS=KEYWORDS,SEPARATED,BY,COMMAS
 SITE_AUTHOR=<AUTHOR>
 SITE_DESCRIPTION=<DESCRIPTION>
 
+### If you do not want to use one of these on the website;leave it equal to ""
 DISCORD_URL="<DISCORD>"
 TWITTER_URL="https://twitter.com/<TWITTER>"
 TWITCH_URL="https://twitch.tv/<TWITCH>"
