--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -5,7 +5,7 @@ labels: ["feature request", "enhancement", "feature"]
 body:
   - type: markdown
     attributes:
-      value: Thanks for considering improvements to the project! :blue_heart:
+      value: Thanks for considering improvements to the project!
   - type: checkboxes
     id: terms
     attributes:
