--- a/.github/ISSUE_TEMPLATE/FEATURE.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE.yml
@@ -1,6 +1,6 @@
 name: Feature Request
 description: Suggest a new feature for the project!
-title: "[Feature]: "
+title: "[Request]: "
 labels: ["feature request", "enhancement", "feature"]
 body:
   - type: markdown
