--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,35 @@
-aiohttp==3.11.16
-asgiref==3.8.1
+aiohttp==3.11.*
+asgiref==3.8.*
 celery[redis]
 certifi==2025.1.31
-crispy-bootstrap5==2025.4
-Django>=5.2
-#django-allauth==65.7.0
-django-bootstrap5==25.1
-django-classy-tags==4.1.0
-django-cors-headers==4.7.0
-django-environ==0.12.0
-django-ratelimit==4.1.0
-django-resized==1.0.3
-django-sekizai==4.1.0
-djangorestframework==3.16.0
-djangorestframework-api-key==3.1.0
-hypercorn==0.17.3
-langcodes==3.5.0
-language_data==1.3.0
-markdown==3.7
-pillow==11.2.1
-psycopg==3.2.6
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
+crispy-bootstrap5==2025.*
+Django==5.2.*
+#django-allauth==65.7.*
+django-bootstrap5==25.*
+django-classy-tags==4.1.*
+django-cors-headers==4.7.*
+django-environ==0.12.*
+django-ratelimit==4.1.*
+django-resized==1.0.*
+django-sekizai==4.1.*
+djangorestframework==3.16.*
+djangorestframework-api-key==3.1.*
+hypercorn==0.17.*
+langcodes==3.5.*
+language_data==1.3.*
+markdown==3.*
+pillow==11.2.*
+psycopg==3.2.*
+python-dateutil==2.9.*
+python-dotenv==1.1.*
 pytz==2025.2
-redis==5.2.1
-requests==2.32.3
+redis==5.2.*
+requests==2.32.*
+sentry-sdk==2.26.*
 rsa==4.9
-tzdata==2025.2
-uritemplate==4.1.1
-urllib3==2.4.0
-wheel==0.45.1
-whitenoise==6.9.0
-yarl==1.19.0
+tzdata==2025.*
+uritemplate==4.1.*
+urllib3==2.4.*
+wheel==0.45.*
+whitenoise==6.9.*
+yarl==1.19.*
