Improves overall leaderboard functionality
Adds an overall leaderboard that combines points from all non-obsolete runs.

Refactors directory structure and updates guide repository link.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,8 @@ services:
       - redis
     volumes:
       - ./srlc:/srlc
-      - ./static:/srlc/static
-      - /home/thepackle/repos/guides:/srlc/docs
+      - ./static:/srlc/website/static
+      - ../guides:/srlc/docs
     networks:
       - srlc
 
