--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
           oauth-client-id: ${{ secrets.DEV_TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.DEV_TS_OAUTH_SECRET }}
           tags: tag:ci
-          version: 1.52.0
+          version: latest
 
       - name: SSH - Deploy - Restart Docker
         uses: appleboy/ssh-action@v1.0.3
