Fixes obsolete run flagging
Corrects an issue where new runs could be improperly flagged as obsolete.

Normalizes run submission flow to accurately reflect obsolete status.
Removes obsolete run status based on ID.

Adds static files to gitignore.
Corrects docker compose command.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Run Docker Tests
         run: |
-          docker compose exec -T django python3 manage.py test
+          docker exec -T django python3 manage.py test
 
   deploy-main:
     if: github.ref == 'refs/heads/main'
