--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,6 +64,10 @@ jobs:
             docker compose down
             docker compose up -d --build
 
+      - name: Wait Job
+        run: |
+          sleep 10s
+
       - name: Cleanup Docker
         run: |
           echo "Cleaning up Docker system..."
