--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - redis
     volumes:
       - ./srlc:/srlc
-      - ./static:/static
+      - ./static:/srlc/static
       - ../guides:/srlc/docs
     networks:
       - srlc
