--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
 
             echo "Restarting Docker containers..."
             docker compose down
-            docker compose up -d --build
+            docker compose -f docker-compose.PROD.yml up -d --build
 
       - name: Wait Job
         run: |
