Renames production nginx container
Simplifies the container naming scheme for the production nginx instance.

This change ensures consistency across environments and improves overall clarity.

--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -45,7 +45,7 @@ services:
         context: ./nginx
         dockerfile: Dockerfile
       image: nginx:production
-      container_name: hds_nginx_production
+      container_name: nginx
       ports:
         - 80:80
         - 443:443
