--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,3 +1,20 @@
+server{
+	listen 80;
+	server_name _;
+
+	return 444;
+}
+
+server{
+	listen 443;
+	server_name _;
+
+    ssl_certificate /etc/letsencrypt/live/${SSL_HOST}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SSL_HOST}/privkey.pem;	
+
+	return 444;
+}
+
 server {
     listen 80;
     server_name ${SSL_HOST} www.${SSL_HOST};
@@ -10,8 +27,6 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
-
-
 }
 
 server {
@@ -34,6 +49,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header P3P 'CP=""';
+        proxy_redirect off;
     }
 
     location /static/ {
