--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:1.27.0-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx.conf /etc/nginx/
+COPY nginx.prod.conf /etc/nginx/
 
 COPY ./manager.sh /manager.sh
 
