--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,6 +1,8 @@
-FROM nginx:1.27.0-alpine
+FROM nginx:1.27.1-alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
+#COPY nginx.conf /etc/nginx/conf.d
+COPY nginx.dev.conf /etc/nginx/
 COPY nginx.prod.conf /etc/nginx/
 
 COPY ./manager.sh /manager.sh
