Configures Docker environment
Enhances the Docker setup for development and production, focusing on security and maintainability.

Introduces a dedicated application user within the Docker container to improve security.
Modifies file copying to ensure correct permissions for the application user.
Adds entrypoint and start scripts for simplified and standardized container execution.
Updates the base image and installs necessary dependencies.
Corrects database name references across configuration files.
Introduces named volumes in docker-compose files for data persistence.

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 COMMUNITY_NAME="<COMMUNITY_NAME>"
-POSTGRES_NAME="<POSTGRES_TABLE>"
+POSTGRES_DB="<POSTGRES_TABLE>"
 POSTGRES_USER="<POSTGRES_USER>"
 POSTGRES_PASSWORD="<POSTGRES_PASSWORD>"
 SECRET_KEY="<SECRETKEY>" # https://djecrety.ir
 SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" # MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
 ALLOWED_HOSTS=<IP>,localhost
+
+# Email is used in production for Certbot (getting Let's Encrypt certs)
+EMAIL="<EMAIL>@<DOMAIN.COM>"
 
 # Used for the db_backup.sh script. Instructions in README.
 B2_BUCKET=<BUCKET>
