--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -1,3 +1,15 @@
+volumes:
+    app_data:
+      name: slrc_app_data
+    static_files:
+      name: srlc_static_files
+    certbot_web:
+      name: srlc_certbot_web
+    certbot_certs:
+      name: srlc_certbot_certs
+    nginx_config:
+      name: srlc_nginx_config
+
 services:
   postgres:
     container_name: postgres
@@ -5,11 +17,11 @@ services:
     restart: unless-stopped
     shm_size: 128mb
     environment:
-      POSTGRES_DB: ${POSTGRES_NAME}
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
     networks:
       - srlc
 
@@ -25,9 +37,9 @@ services:
       - postgres
       - redis
     volumes:
-      - ./srlc:/srlc
-      - ./static:/srlc/static
-      - ../guides:/srlc/docs
+      - ./srlc:/app
+      - static_files:/app/static
+      - ../guides:/app/docs
     networks:
       - srlc
 
@@ -44,7 +56,7 @@ services:
       build:
         context: ./nginx
         dockerfile: Dockerfile
-      image: nginx:production
+      image: nginx:1.27.5-bookworm
       container_name: nginx
       ports:
         - 80:80
@@ -54,10 +66,10 @@ services:
       env_file:
         - .env
       volumes:
-        - ./static:/app/static:ro
-        - ./certbot/web:/vol/www:ro
-        - ./certbot/certs:/etc/letsencrypt/:ro
-        - ./nginx:/etc/nginx/:rw
+        - static_files:/srlc/static:ro
+        - certbot_web:/vol/www:ro
+        - certbot_certs:/etc/letsencrypt/:ro
+        - nginx_config:/etc/nginx/:rw
       networks:
         - srlc
 
@@ -71,9 +83,9 @@ services:
       depends_on:
         - nginx
       volumes:
-        - ./certbot/web:/vol/www:rw
-        - ./certbot/certs:/etc/letsencrypt/:rw
-        - ./nginx:/etc/nginx/:rw
+        - certbot_web:/vol/www:rw
+        - certbot_certs:/etc/letsencrypt/:rw
+        - nginx_config:/etc/nginx/:rw
       networks:
         - srlc
 
