--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,10 +37,10 @@ server {
     }
 
     location /static/ {
-        alias /app/static/;
+        alias /srlc/static/;
     }
 
     location /media/ {
-        alias /app/media/;
+        alias /srlc/media/;
     }
 }
