--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -54,10 +54,10 @@ server {
     }
 
     location /static/ {
-        alias /app/static/;
+        alias /srlc/static/;
     }
 
     location /media/ {
-        alias /app/media/;
+        alias /srlc/media/;
     }
 }
