Updates Nginx configuration
Updates Nginx configuration to correctly serve static and media files from the /app directory.
Also, refactors the SSL configuration to use the production Nginx configuration file.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,8 +10,6 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
-
-
 }
 
 server {
@@ -37,10 +35,10 @@ server {
     }
 
     location /static/ {
-        alias /srlc/static/;
+        alias /app/static/;
     }
 
     location /media/ {
-        alias /srlc/media/;
+        alias /app/media/;
     }
 }
