--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -14,10 +14,10 @@ server {
     }
 
     location /static/ {
-        alias /srlc/static/;
+        alias /app/static/;
     }
 
     location /media/ {
-        alias /srlc/media/;
+        alias /app/media/;
     }
 }
