Updates static files volume mount
Updates the static files volume mount point and nginx configurations to serve static files from the correct directory.
Removes the unused media files location.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,10 @@ server {
     location / {
         return 301 https://$host$request_uri;
     }
+
+    location /static/ {
+        alias /app/static/;
+    }
 }
 
 server {
@@ -36,9 +40,5 @@ server {
 
     location /static/ {
         alias /app/static/;
-    }
-
-    location /media/ {
-        alias /app/media/;
     }
 }
