--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -66,7 +66,7 @@ services:
       env_file:
         - .env
       volumes:
-        - static_files:/srlc/static:ro
+        - static_files:/app/static:ro
         - certbot_web:/vol/www:ro
         - certbot_certs:/etc/letsencrypt/:ro
         - nginx_config:/etc/nginx/:rw
