Fixed reject issue; change video collect behavior
Will select last video in the videos array from SRC, since that is the "real" video.

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ POSTGRES_PASSWORD="<POSTGRES_PASSWORD>"
 SECRET_KEY="<SECRETKEY>" # https://djecrety.ir
 SSL_HOST="<WEBSITE_URL>"
 DEBUG_MODE="True" # MAKE SURE THIS IS SET TO FALSE IN PRODUCTION!!
-ALLOWED_HOSTS=<IP>,localhost
+ALLOWED_HOSTS=<IP>,localhost,django
 
 # Email is used in production for Certbot (getting Let's Encrypt certs)
 EMAIL="<EMAIL>@<DOMAIN.COM>"
