--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -33,8 +33,8 @@ services:
       - postgres
       - redis
     volumes:
-      - ./thpsrun:/app
-      - static_files:/app/static
+      - ./srlc:/app
+      - static_files:/app/static:rw
       - ../guides:/app/docs
     networks:
       - thpsrun
