Updated formatting, added player option update, some other things
### v3.1.0
###### June 20, 2025
### Added
*   Added return types to functions across the project.
*   Added additional PUT `/players` endpoint option to update a player's nickname through the API.
*   Added new crontab commands in the documentation for backing up the database every night and collecting static images regularly.

### Fixed
*   Fixed an issue where some API functions would return an `HTTP 200 OK` response instead of `HTTP 404 NOT FOUND` when something didn't exist.

### Changes
*   Changed the PUT `/players` endpoint so that it will use the player's unique ID to query SRC instead of their name.
    *   If they changed their username, it would return a 404.

### Misc.
*   Updated SentrySDK to give better verbose logging.
*   Updated libraries.

--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -10,7 +10,7 @@ body:
     id: terms
     attributes:
       label: Guidelines
-      description: By submitting this issue, you agree to follow the [thps.run Contributing Guidelines](https://github.com/thpsrun/website/.github/blob/main/CONTRIBUTING.md).
+      description: By submitting this issue, you agree to follow the [thps.run Contributing Guidelines](https://github.com/thpsrun/website/blob/main/.github/CONTRIBUTING.md).
       options:
         - label: I agree to follow this project's Contributing Guidelines.
           required: true
