--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ sentry-sdk>=2.30.0
 rsa==4.9.*
 tzdata==2025.*
 uritemplate==4.1.*
-urllib3==2.4.*
+urllib3>=2.5.*
 wheel==0.45.*
 whitenoise==6.9.*
 yarl==1.20.*
