"srlc" dir switched to "backend"; docs and ymls fixed to reflect

--- a/.gitignore
+++ b/.gitignore
@@ -130,11 +130,11 @@ dmypy.json
 # Other shit to ignore
 */.DS_Store
 .DS_Store
-srlc/website/sqlite3.db
-srlc/srl/static/srl/imgs/awards/
-srlc/db.json
-srlc/srl/static/pfp/*
-srlc/website/static/*
+backend/website/sqlite3.db
+backend/srl/static/srl/imgs/awards/
+backend/db.json
+backend/srl/static/pfp/*
+backend/website/static/*
 
 backups/
 bin/
