--- a/docker-compose.PROD.yml
+++ b/docker-compose.PROD.yml
@@ -33,7 +33,7 @@ services:
       - postgres
       - redis
     volumes:
-      - ./srlc:/app
+      - ./backend:/app
       - static_files:/app/static:rw
       - ../guides:/app/docs
     networks:
