--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - postgres
       - redis
     volumes:
-      - ./srlc:/app
+      - ./backend:/app
       - static_files:/app/static:rw
       - ../guides:/app/docs
     networks:
