--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
-aiohttp==3.12.*
-asgiref==3.9.*
+aiohttp>=3.13.3
+asgiref==3.11.*
 celery[redis]==5.6.1
-certifi==2025.*
+certifi==2026.*
 crispy-bootstrap5==2025.*
 Django==6.0.*
 #django-allauth==65.13.*
-django-bootstrap5==25.*
+django-bootstrap5==26.*
 django-classy-tags==4.1.*
-django-cors-headers==4.7.*
-django-debug-toolbar==5.2.*
+django-cors-headers==4.8.*
+django-debug-toolbar==6.1.*
 django-environ==0.12.*
 django-ratelimit==4.1.*
 django-resized==1.0.*
 django-sekizai==4.1.*
 django-ninja==1.5.*
 djangorestframework-api-key==3.1.*
-hypercorn==0.17.*
+hypercorn==0.18.*
 langcodes==3.5.*
 language_data==1.3.*
 markdown==3.*
-pillow==11.3.*
-psycopg==3.2.*
+pillow==12.1.*
+psycopg==3.3.*
 python-dateutil==2.9.*
 python-dotenv==1.1.*
 pytz==2025.*
@@ -29,8 +29,8 @@ requests==2.*
 sentry-sdk==2.*
 rsa==4.9.*
 tzdata==2025.*
-uritemplate==4.1.*
+uritemplate==4.2.*
 urllib3>=2.5.0
 wheel==0.45.*
-whitenoise==6.9.*
-yarl==1.20.*
+whitenoise==6.11.*
+yarl==1.22.*
